--- a/signup.html
+++ b/signup.html
@@ -113,7 +113,7 @@
     <div class="register-photo">
         <div class="form-container">
             <div class="image-holder"></div>
-            <form id="form">
+            <form id="form" action="parent_login.html">
                 <center>
                     <h2 class="text-center">Create an account.</h2>
                 </center>
