--- a/parent_login.html
+++ b/parent_login.html
@@ -92,7 +92,7 @@
 
             <div class="image-holder"></div>
 
-            <form action="parent_dashboard.html" method="post">
+            <form action="parent_dashboard.html">
                 <button type="button" class="btn btn-danger"><a href="index.html"
                         style="text-decoration: none;color: white;">Home</a></button>
                 <center>
