--- a/parent_dashboard.html
+++ b/parent_dashboard.html
@@ -22,7 +22,7 @@
             </div>
             <ul class="list-unstyled components text-secondary">
                 <li>
-                    <a href="dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
+                    <a href="parent_dashboard.html"><i class="fas fa-home"></i> Dashboard</a>
                 </li>
 
 
